gimp2: update to version 2.6.11, configuration, dependencies, disable lcms plugin for 64-bit quartz.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72156 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -6,8 +6,7 @@ PortSystem 1.0
 name            gimp2
 conflicts       gimp2-devel
 # please remember to update the gimp metapackage to match
-version         2.6.10
-revision        3
+version         2.6.11
 categories      graphics
 maintainers     devans
 homepage        http://www.gimp.org/
@@ -20,14 +19,18 @@ long_description \
 	The GIMP provides the user with a wide variety of image \
 	manipulation, painting, processing, and rendering tools.
 
+#
+# gegl is not universal
+#
+
 universal_variant  no
 
 set branch      [join [lrange [split ${version} .] 0 1] .]
 master_sites    gimp:gimp/v${branch}/
 
-checksums       md5     b92710ad9f1b52fec98554d765473819 \
-                sha1    5781fed3fbf45969eac5e6ee2c7a4bb0bb529ecc \
-                rmd160  b58fc4e5717508ad531827c82e48067df0d0a748
+checksums       md5     bb2939fe13e54fc7255cef5d097bb5dd \
+                sha1    2f9d596e727bdbf304fa78257c1731d9faf3934c \
+                rmd160  a116377499e58dc2bfe231ab3c057d0be94091ff
 
 distname        gimp-${version}
 use_bzip2       yes
@@ -44,14 +47,11 @@ depends_lib     port:iso-codes \
                 port:libmng \
                 port:libexif \
                 port:aalib \
-                port:librsvg \
                 port:poppler \
-                port:gnome-vfs \
                 port:libgnomeui \
                 port:curl \
                 port:libwmf \
                 port:lcms \
-                port:dbus-glib \
                 port:py26-gtk
 
 platform darwin 9 {
@@ -61,7 +61,6 @@ platform darwin 9 {
     }
 }
 
-use_parallel_build  yes
 configure.python    ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pkg_config_path ${python_framework}/lib/pkgconfig
@@ -70,6 +69,8 @@ configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version
                 --enable-mp \
                 --with-pdbgen \
                 --with-x \
+                --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib \
                 --without-hal \
                 --without-alsa \
                 --without-gvfs \
@@ -128,13 +129,23 @@ pre-configure {
 
 variant quartz requires no_x11 conflicts x11 {
     configure.ldflags-append   -framework Carbon
+
+#
+# if variant is +quartz lcms plugin uses 32 bit only Carbon API
+#
+
+    if {$build_arch == "x86_64" || $build_arch == "ppc64"} {
+        configure.args-append --without-lcms
+    }
 }
 
 variant x11 conflicts quartz description {Enable rendering in X11} {
 }
 
 variant no_x11 {
-    configure.args-delete --with-x
+    configure.args-delete --with-x \
+                --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib
     configure.args-append --without-x
 }
 
