--- a/dports/graphics/gimp/Portfile
+++ b/dports/graphics/gimp/Portfile
@@ -35,7 +35,7 @@ platform macosx {
     # in a 64-bit version - ticket #21391
     #
     # if +quartz is set, remove ufraw which uses CMFlattenProfile if gtk2 is
-    # built with Quartz support and is also not availabe in a 64-bit version
+    # built with Quartz support and is also not available in a 64-bit version
     # ticket #23675
     #
     if { "darwin" == ${os.platform} } {
