--- a/dports/cross/sh-rtems-binutils/Portfile
+++ b/dports/cross/sh-rtems-binutils/Portfile
@@ -51,6 +51,9 @@ configure.dir   	${workpath}/build
 configure.cmd   	${worksrcpath}/configure
 configure.args  	--infodir='${prefix}/share/info' --target=${crossgcc-target} \
 					--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man'
+if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
+    configure.args-append --build=${build_arch}-apple-darwin${os.version}
+}
 build.dir       	${workpath}/build
 
 # We don't want the etc module.
