--- a/dports/cross/sh-rtems-binutils/Portfile
+++ b/dports/cross/sh-rtems-binutils/Portfile
@@ -50,7 +50,8 @@ pre-configure   	{ system "cd ${workpath} && mkdir -p build"}
 configure.dir   	${workpath}/build
 configure.cmd   	${worksrcpath}/configure
 configure.args  	--infodir='${prefix}/share/info' --target=${crossgcc-target} \
-					--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man'
+					--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man' \
+					--disable-werror
 if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
     configure.args-append --build=${build_arch}-apple-darwin${os.version}
 }
