sh-rtems-gcc: clear archflags (#26733), set build/host type
git-svn-id: https://svn.macports.org/repository/macports/trunk@72166 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/sh-rtems-gcc/Portfile
+++ b/dports/cross/sh-rtems-gcc/Portfile
@@ -90,6 +90,11 @@ pre-configure   {
 configure.dir   ${workpath}/build
 configure.cmd   ${workpath}/gcc-${version}/configure
 configure.env	${environment}
+# the generated compiler doesn't accept -arch
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
 configure.args  --infodir='${prefix}/share/info' \
 				--mandir='${prefix}/share/man' \
 				--target=${crossgcc-target} \
@@ -100,6 +105,10 @@ configure.args  --infodir='${prefix}/share/info' \
 				--with-newlib \
 				--with-gxx-include-dir=${prefix}/${crossgcc-target}/include/c++/${version}/ \
 				${default-languages}
+if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
+    configure.args-append --build=${build_arch}-apple-darwin${os.version} \
+                          --host=${build_arch}-apple-darwin${os.version}
+}
 
 build.dir       ${workpath}/build
 
