--- a/dports/comms/telepathy-glib/Portfile
+++ b/dports/comms/telepathy-glib/Portfile
@@ -42,4 +42,4 @@ configure.args  --enable-vala-bindings \
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex ${name}-(\[0-9\]+\\.\[0-9\]*\[02468\](\\.\[0-9\]+)*)${extract.suffix}
