--- a/dports/net/wakeonlan/Portfile
+++ b/dports/net/wakeonlan/Portfile
@@ -7,6 +7,7 @@ version		0.41
 categories	net
 maintainers	mww
 platforms	darwin freebsd
+supported_archs	noarch
 description	wakeonlan sends magic packets for network-devices to wake up
 long_description	Wakeonlan is a Perl script that sends 'magic packets' \
 			to wake-on-LAN enabled ethernet adapters and \
@@ -39,4 +40,3 @@ destroot {
 livecheck.type	regex
 livecheck.url	${homepage}
 livecheck.regex	wakeonlan-(\[0-9\\.\]+)\\.tar.gz
-
