py25-pylons: add missing dependencies (#15475)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72171 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-pylons/Portfile
+++ b/dports/python/py25-pylons/Portfile
@@ -40,7 +40,9 @@ depends_lib     port:py25-distribute \
                 port:py25-nose \
                 port:py25-beaker \
                 port:py25-formencode \
-                port:py25-cheetah
+                port:py25-cheetah \
+                port:py25-mako \
+                port:py25-decorator
 
 post-destroot {
     # We should notify upstream not to install tests.
