supertuxkart: add missing deps (#15388)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72172 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/supertuxkart/Portfile
+++ b/dports/games/supertuxkart/Portfile
@@ -20,6 +20,7 @@ homepage            http://www.tux4kids.com
 
 checksums           md5 badcaf9cb51afc11c1abf126b2cbba74
 master_sites        sourceforge
+depends_build       port:pkgconfig
 depends_lib         path:lib/pkgconfig/sdl.pc:libsdl \
-                    port:plib
+                    port:plib port:libvorbis
 use_bzip2           yes
