supertuxkart: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@72173 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/supertuxkart/Portfile
+++ b/dports/games/supertuxkart/Portfile
@@ -16,7 +16,7 @@ long_description    SuperTuxKart is a Free 3D kart racing game, with many tracks
 distname            ${name}-${version}-src
 worksrcdir          ${name}-${version}
 
-homepage            http://www.tux4kids.com
+homepage            http://supertuxkart.sourceforge.net/
 
 checksums           md5 badcaf9cb51afc11c1abf126b2cbba74
 master_sites        sourceforge
