games/crack-attack: Add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@72174 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/crack-attack/Portfile
+++ b/dports/games/crack-attack/Portfile
@@ -42,3 +42,7 @@ configure.args  --mandir=${prefix}/share/man \
                 --with-sdl-exec-prefix=${prefix} \
                 --disable-sdltest \
                 --disable-binreloc
+
+livecheck.type  regex
+livecheck.url   ${homepage}
+livecheck.regex Latest:\\s+(\\d+(?:\\.\\d+)+)
