font-bh-ttf: Use the correct fontconfig directory
git-svn-id: https://svn.macports.org/repository/macports/trunk@72176 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/font-bh-ttf/Portfile
+++ b/dports/x11/font-bh-ttf/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 PortGroup           x11font 1.0
 x11font.setup       font-bh-ttf 1.0.2 TTF
+revision            1
 maintainers         jeremyhu openmaintainer
 description         X.org Bigelow & Holmes TrueType fonts
 long_description    ${description}
@@ -13,3 +14,4 @@ checksums           md5     56e740e42bd47676f16f90871a414900 \
                     sha1    adf4f1a8e12904bf4d00c2d4c63efa8a5dfdb8bb \
                     rmd160  ad2de078142cddd3c8fcfe344fe3c3d7a7261de8
 
+destroot.args       fontconfigdir=${prefix}/etc/fonts
