ImageMagick: update to 6.6.4-9; see #26735
git-svn-id: https://svn.macports.org/repository/macports/trunk@72177 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ImageMagick/Portfile
+++ b/dports/graphics/ImageMagick/Portfile
@@ -6,7 +6,7 @@ PortGroup                   archcheck 1.0
 
 name                        ImageMagick
 conflicts                   cryptlib
-version                     6.6.4-8
+version                     6.6.4-9
 set reasonable_version      [lindex [split ${version} -] 0]
 homepage                    http://www.imagemagick.org/
 categories                  graphics devel
@@ -40,9 +40,8 @@ master_sites                http://image_magick.veidrodis.com/image_magick/ \
 #                            http://ftp.surfnet.nl/pub/ImageMagick/
 #                            ftp://ftp.nluug.nl/pub/${name}/
 
-checksums                   md5     657221610f5ae134b71b422e9d4a7e44 \
-                            sha1    ee7d4e75c2eddf25ada07468d72c2a264c73bb1c \
-                            rmd160  c033347fd438858f1d17d6bd6b284474bf16e9f3
+checksums                   sha1    fa5ee2e08ded5145dc7c16dc8d8723c72e100104 \
+                            rmd160  d107abe38aa61da924c0780d2ccb55d8ec49e593
 
 patchfiles                  patch-m4_ax_opencl.m4.diff
 
