libextractor: update to 0.6.2; see #26738
git-svn-id: https://svn.macports.org/repository/macports/trunk@72178 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libextractor/Portfile
+++ b/dports/devel/libextractor/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                libextractor
-version             0.5.20c
+version             0.6.2
 categories          devel
 maintainers         nomaintainer
 description         A library for extraction af meta-data.
@@ -17,9 +17,9 @@ long_description \
 homepage            http://gnunet.org/libextractor/
 master_sites        http://gnunet.org/libextractor/download/ gnu
 platforms           darwin
-checksums           md5     5d655310c20dd6f8b1bfd5527aed52fe \
-                    sha1    6b89c104a1c9e0bb4c8b949563b8ec8433c879d0 \
-                    rmd160  dfdd25f674d5304ab5a5906e6be0af8837dc6f92
+
+checksums           sha1    fd4fb6a1f24353be9cf7fd04b56b85f2680efe11 \
+                    rmd160  ff53d8b889651e730f28344900414f1971aca468
 
 depends_lib         port:bzip2 port:zlib port:gettext port:libiconv \
                     port:libtool \
