Update audio/libsndfile to 1.0.22.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72179 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libsndfile/Portfile
+++ b/dports/audio/libsndfile/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                libsndfile
-version             1.0.21
+version             1.0.22
 categories          audio
 maintainers         perry openmaintainer
 platforms           darwin
@@ -16,7 +16,7 @@ long_description    ${description}
 license             LGPLv2.1
 homepage            http://www.mega-nerd.com/libsndfile/
 
-livecheck.regex     {Updates for (.+).}
+livecheck.regex     {Updates for (\d+\.\d+\.\d+)}
 livecheck.type      regex
 livecheck.url       ${homepage}ChangeLog
 
@@ -25,7 +25,7 @@ depends_lib         port:flac port:libogg port:libvorbis
 
 master_sites        ${homepage}files/
 
-checksums           rmd160 3f4d3472aebf24b02c2ce3f370023f50096c1fbd
+checksums           rmd160 fbe5105bf8815d526bb18ca42645b03b20916149
 
 configure.args \
     --disable-alsa \
@@ -42,22 +42,22 @@ if {[variant_isset no_external_libs] && ![variant_isset sqlite]} {
 }
 
 variant no_external_libs description {Disable support for FLAC, Ogg and Vorbis} {
-    depends_lib-delete port:flac port:libogg port:libvorbis
+    depends_lib-delete    port:flac port:libogg port:libvorbis
 
     configure.args-append --disable-external-libs
     configure.args-delete --enable-external-libs
 }
 
 variant octave description {Enable support for Octave} {
-    depends_build-append port:gsed
-    depends_lib-append   port:octave
+    depends_build-append  port:gsed
+    depends_lib-append    port:octave
 
     configure.args-append --enable-octave
     configure.args-delete --disable-octave
 }
 
 variant sqlite description {Enable support for SQLite} {
-    depends_lib-append port:sqlite3
+    depends_lib-append    port:sqlite3
 
     configure.args-append --enable-sqlite
     configure.args-delete --disable-sqlite
