Update python/py26-tempita to 0.5dev.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72181 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tempita/Portfile
+++ b/dports/python/py26-tempita/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 PortGroup               python26 1.0
 
 name                    py26-tempita
-version                 0.4
+version                 0.5dev
 maintainers             perry openmaintainer
 platforms               darwin
 
@@ -23,4 +23,4 @@ depends_build-append    port:py26-distribute
 distname                Tempita-${version}
 master_sites            http://pypi.python.org/packages/source/T/Tempita/
 
-checksums               rmd160 add105a921d1e7ba8099ee80c79ce05866b70697
+checksums               rmd160 412877ab3e4c8dd23b42324d10896cc9efcafd10
