LibVNCServer: correct platforms line
git-svn-id: https://svn.macports.org/repository/macports/trunk@72184 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/LibVNCServer/Portfile
+++ b/dports/devel/LibVNCServer/Portfile
@@ -6,7 +6,7 @@ PortSystem                  1.0
 name                        LibVNCServer
 version                     0.9.7
 categories                  devel
-platforms                   macosx
+platforms                   darwin
 maintainers                 ryandesign
 license                     GPL-2+
 
