--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   cmake 1.0
 
 name                        libhsplasma
-version                     0.0-700
+version                     0.0-704
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -21,15 +21,19 @@ long_description            libHSPlasma is a library for reading files used \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
-hg.tag                      80c5b2a2776c
+hg.tag                      6b48fe991d5e
 
 depends_lib                 port:zlib \
                             port:jpeg \
                             port:openssl \
                             port:python26
 
-patchfiles                  patch-commdebug.diff \
+patchfiles                  patch-Python-CMakeLists.txt.diff \
                             patch-endian.diff
+
+post-patch {
+    reinplace "s|@PYTHON@|${prefix}/bin/python2.6|g" ${worksrcpath}/Python/CMakeLists.txt
+}
 
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
@@ -38,8 +42,6 @@ configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
 set pyhsplasma              ${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/PyHSPlasma.so
 
 post-destroot {
-    xinstall -d ${destroot}[file dirname ${pyhsplasma}]
-    move ${destroot}${prefix}/lib/PyHSPlasma.dylib ${destroot}${pyhsplasma}
     system "install_name_tool -id ${pyhsplasma} ${destroot}${pyhsplasma}"
 }
 
