boswars: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@72186 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/boswars/Portfile
+++ b/dports/games/boswars/Portfile
@@ -70,13 +70,9 @@ destroot {
     }
 }
 
-post-install {
-    ui_msg "****************************************************************"
-    ui_msg "*                                                              *"
-    ui_msg "* Attention! Changing display mode to OpenGL in the settings   *"
-    ui_msg "* menu may not work and cause an application crash! If this    *"
-    ui_msg "* happens remove ~/Library/boswars/preferences.lua to reset    *"
-    ui_msg "* the setting.                                                 *"
-    ui_msg "*                                                              *"
-    ui_msg "****************************************************************"
-}
+notes "
+Attention! Changing display mode to OpenGL in the settings\
+menu may not work and cause an application crash! If this\
+happens remove ~/Library/boswars/preferences.lua to reset\
+the setting.
+"
