boswars: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@72187 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/boswars/Portfile
+++ b/dports/games/boswars/Portfile
@@ -76,3 +76,7 @@ menu may not work and cause an application crash! If this\
 happens remove ~/Library/boswars/preferences.lua to reset\
 the setting.
 "
+
+livecheck.type      regex
+livecheck.url       ${homepage}download.shtml
+livecheck.regex     ${name}-(\[0-9.\]+)-src${extract.suffix}
