lv2core: update homepage, master_sites, livecheck, noarch.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72191 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/lv2core/Portfile
+++ b/dports/audio/lv2core/Portfile
@@ -8,8 +8,7 @@ version         3.0
 maintainers     devans
 categories      audio
 platforms       darwin
-homepage        http://lv2plug.in/spec/
-universal_variant   no
+supported_archs noarch
 
 description     LV2 Audio Plugin Standard and Package
 
@@ -19,7 +18,8 @@ long_description \
                 a simple but extensible successor of LADSPA, intended to address \
                 the limitations of LADSPA which many applications have outgrown.
 
-master_sites    ${homepage}
+homepage        http://lv2plug.in/
+master_sites    ${homepage}/spec/
 
 checksums       md5     382f7d96ff0374c0c495336e1c8bb999 \
                 sha1    6f277b32b1ce60e211db95bf37b71045d505b55d \
@@ -44,5 +44,5 @@ destroot.destdir --destdir=${destroot}
 destroot.violate_mtree yes
 
 livecheck.type  regex
-livecheck.url   ${homepage}
-livecheck.regex <a href="http://lv2plug.in/spec/${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}">LV2 Core Package
+livecheck.url   ${master_sites}
+livecheck.regex ${name}-(\\d+(?:\\.\\d+)*)\\.tar
