lv2core: master_sites.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72195 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/lv2core/Portfile
+++ b/dports/audio/lv2core/Portfile
@@ -19,7 +19,7 @@ long_description \
                 the limitations of LADSPA which many applications have outgrown.
 
 homepage        http://lv2plug.in/
-master_sites    ${homepage}/spec/
+master_sites    ${homepage}spec/
 
 checksums       md5     382f7d96ff0374c0c495336e1c8bb999 \
                 sha1    6f277b32b1ce60e211db95bf37b71045d505b55d \
