--- a/dports/audio/lv2core/Portfile
+++ b/dports/audio/lv2core/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            lv2core
 version         3.0
+license         LGPLv2.1+ BSD
 maintainers     devans
 categories      audio
 platforms       darwin
