Mark llvm-devel as being replaced by llvm; see #21174
git-svn-id: https://svn.macports.org/repository/macports/trunk@72199 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/llvm-devel/Portfile
+++ b/dports/lang/llvm-devel/Portfile
@@ -14,6 +14,8 @@ description             llvm is a next generation compiler infrastructure
 long_description        llvm brings tools to work on the llvm intermediate \
                         language incl. a C and C++ frontend.
 
+replaced_by             llvm
+
 homepage                http://llvm.org/
 master_sites            macports:pguyot
 
