llvm with clang version default
git-svn-id: https://svn.macports.org/repository/macports/trunk@72200 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/llvm/Portfile
+++ b/dports/lang/llvm/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name                    llvm
-version                 2.7
-revision                2
+version                 2.8
 categories              lang
 platforms               darwin
 license                 UIUC/NCSA
@@ -22,13 +21,19 @@ master_sites            ${homepage}releases/${version}/
 
 extract.suffix          .tgz
 
-checksums               md5     ac322661f20e7d6c810b1869f886ad9b \
-                        sha1    059fc21b0ec1b649c4a3dec81756e5f92aa131a2 \
-                        rmd160  0fa2f362dd6a45efec35ce8fa0f8d36d98f32c8f
+checksums               ${distname}${extract.suffix} \
+                            md5     6b13c504c718385fa0a4d375275e7a05 \
+                            sha1    10d8957efac1d970fbc8264b28855250e9ce9eb1 \
+                            rmd160  ac54bd88d4fb624833cce86a1cb7f6f9cd2bc106 \
+                        clang-2.8.tgz \
+                            md5     10e14c901fc3728eecbd5b829e011b59 \
+                            sha1    94977c84ce136307dbbeade95e67bfe3c25161ff \
+                            rmd160  f00956b6de29cc09f3992aeabd140f2189c6cf39
 
 depends_lib             port:libffi
 depends_run             bin:perl:perl5
 
+default_variants        +clang
 universal_variant       no
 
 configure.dir           ${workpath}/build
@@ -66,19 +71,17 @@ post-destroot {
 
     file copy ${worksrcpath}/include ${destroot}${prefix}/lib/llvm/src
     file copy ${configure.dir}/include ${destroot}${prefix}/lib/llvm/obj
-    file copy ${configure.dir}/Release-Asserts ${destroot}${prefix}/lib/llvm/obj
+    file copy ${configure.dir}/Release ${destroot}${prefix}/lib/llvm/obj
 
     file copy ${configure.dir}/Makefile.config ${destroot}${prefix}/lib/llvm/obj
-    
-    file copy ${configure.dir}/Release-Asserts/bin/llvm-mc ${destroot}${prefix}/bin/
     
     system "install_name_tool -id ${prefix}/lib/libLLVMHello.dylib ${destroot}${prefix}/lib/libLLVMHello.dylib"
     system "install_name_tool -id ${prefix}/lib/libprofile_rt.dylib ${destroot}${prefix}/lib/libprofile_rt.dylib"
     
     reinplace "s|${worksrcpath}|${prefix}/lib/llvm/src|g"       ${destroot}${prefix}/bin/llvm-config \
-                                                                ${destroot}${prefix}/lib/llvm/obj/Release-Asserts/bin/llvm-config
+                                                                ${destroot}${prefix}/lib/llvm/obj/Release/bin/llvm-config
     reinplace "s|${configure.dir}|${prefix}/lib/llvm/obj|g"     ${destroot}${prefix}/bin/llvm-config \
-                                                                ${destroot}${prefix}/lib/llvm/obj/Release-Asserts/bin/llvm-config
+                                                                ${destroot}${prefix}/lib/llvm/obj/Release/bin/llvm-config
 
     fs-traverse item ${destroot} {
         if {[file isfile ${item}] && ".dir" == [file tail ${item}]} {
@@ -104,6 +107,13 @@ variant host_only description {Disables non-host targets} {
     configure.args-append --enable-targets=host-only
 }
 
+variant clang description {Install clang frontend} {
+    distfiles-append    clang-${version}${extract.suffix}
+    post-extract {
+        move ${workpath}/clang-${version} ${worksrcpath}/tools/clang
+    }
+}
+
 livecheck.type  regex
 livecheck.url   ${homepage}releases/
-livecheck.regex {'(\d+(?:\.\d+)*)'}
+livecheck.regex {'(\d+\.\d+)'}
