Now that the scala_select port is out, do not install the primary symbolic links into ${prefix}/bin, instead, let scala_select do that. Depend upon the scala_select port so that it's clear it is available to set up the symlinks.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72203 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/scala27/Portfile
+++ b/dports/lang/scala27/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            scala27
 version         2.7.7
+revision        1
 categories      lang java
 maintainers     blair
 description     The Scala Programming Language
@@ -24,6 +25,8 @@ checksums       md5 5d2294d5aab72fec869c0ba666d28b7e \
                 sha1 2197475c8d137cb9f05614807e7d4f18ad8db7e3 \
                 rmd160 ea590b9e25fd0ede59cc6ccd5e9d3bba99885b0f
 
+depends_lib     port:scala_select
+
 use_configure   no
 build           {}
 
@@ -37,7 +40,6 @@ destroot {
         file copy ${worksrcpath} ${scaladir}
 
         foreach f {fsc sbaz sbaz-setup scala scalac scaladoc scalap} {
-                ln -s ../share/scala-2.7/bin/${f} ${destroot}${prefix}/bin/${f}
                 ln -s ../share/scala-2.7/bin/${f} ${destroot}${prefix}/bin/${f}-2.7
         }
 
