--- a/dports/lang/scala28/Portfile
+++ b/dports/lang/scala28/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            scala28
 version         2.8.0
+revision        1
 categories      lang java
 maintainers     openmaintainer brett blair
 description     The Scala Programming Language
@@ -23,6 +24,8 @@ extract.suffix  .tgz
 checksums       md5 f250015d178f05b08bd53baba55c5d46 \
                 sha1 9f06c56718b43a14e8dff412f532e3bfe36f3128 \
                 rmd160 647774d2eea5625796ecf0893d55e2081940afb7
+
+depends_lib     port:scala_select
 
 use_configure   no
 build           {}
