Provide the scala_select file for Scala 2.8.x in this port.  The scala28 file is copied from the scala_select port.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72207 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/scala28/Portfile
+++ b/dports/lang/scala28/Portfile
@@ -1,10 +1,12 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup select 1.0
 
 name            scala28
 version         2.8.0
-revision        1
+revision        2
+set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      lang java
 maintainers     openmaintainer brett blair
 description     The Scala Programming Language
@@ -29,6 +31,9 @@ depends_lib     port:scala_select
 
 use_configure   no
 build           {}
+
+select.group    scala
+select.file     ${filespath}/scala[string map {. {}} ${branch}]
 
 destroot {
         set sharedir ${destroot}${prefix}/share
