jive: don't try to run nonexistent configure (#26746), fix old lex-ism that breaks compilation, respect build_arch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72210 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/jive/Portfile
+++ b/dports/textproc/jive/Portfile
@@ -18,7 +18,12 @@ checksums               md5 6d1132f08857d67b94e45339f5dbed29
 
 worksrcdir              jive
 
-build.args              CC=${configure.cc}
+patchfiles              jive.l.diff
+
+use_configure           no
+
+build.args              CC=${configure.cc} \
+                        CFLAGS="${configure.cflags} ${configure.cc_archflags}"
 
 destroot.args           prefix=${destroot}${prefix} \
                         MANDIR=${destroot}${prefix}/share/man/man1
