jive: really respect build_arch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72211 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/jive/Portfile
+++ b/dports/textproc/jive/Portfile
@@ -23,7 +23,8 @@ patchfiles              jive.l.diff
 use_configure           no
 
 build.args              CC=${configure.cc} \
-                        CFLAGS="${configure.cflags} ${configure.cc_archflags}"
+                        CFLAGS="${configure.cflags} ${configure.cc_archflags}" \
+                        LDFLAGS="${configure.ld_archflags}"
 
 destroot.args           prefix=${destroot}${prefix} \
                         MANDIR=${destroot}${prefix}/share/man/man1
