--- a/dports/editors/vile/Portfile
+++ b/dports/editors/vile/Portfile
@@ -20,4 +20,7 @@ master_sites	ftp://invisible-island.net/${name}/ \
              	ftp://ftp.phred.org/pub/${name}/ \
               	http://gd.tuwien.ac.at/editors/${name}/
 checksums	md5 bc0049be8b4906dacc1165e04a6d29e5
+
+depends_lib	port:ncurses port:libiconv
+
 configure.args  --with-perl --with-ncurses --mandir=${prefix}/share/man
