gnome-keyring: correctly detect PAM configuration and install PAM module in appropriate system directory. Closes #26127.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72213 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-keyring/Portfile
+++ b/dports/gnome/gnome-keyring/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            gnome-keyring
 version         2.30.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      gnome
@@ -25,7 +26,9 @@ checksums       md5     54cb1835c02a40f27fda73e58da17cc6 \
                 sha1    0e0a2a1f4127dc6a01583fb3e81386370d9335f0 \
                 rmd160  9bd3cea25e10e1dcd93cfbc75a6a448e8ab338ca
 
-patchfiles      patch-pkcs11-secret-store-Makefile.in.diff
+patchfiles      patch-pkcs11-secret-store-Makefile.am.diff \
+                patch-configure.in.diff \
+                patch-pam-gkr-pam-module.c.diff
 
 depends_build   port:pkgconfig \
                 port:intltool
@@ -34,7 +37,10 @@ depends_lib     port:libgcrypt \
                 port:libtasn1 \
                 port:gconf
 
-configure.args   --disable-schemas-install
+use_autoreconf  yes
+
+configure.args  --with-pam-dir=/usr/lib/pam \
+                --disable-schemas-install
 
 test.run        yes
 test.target     check
@@ -47,6 +53,12 @@ pre-test {
 
 variant test description {Enable build of tests} {
     configure.args-append   --enable-tests
+}
+
+destroot.violate_mtree yes
+
+post-destroot {
+    file delete ${destroot}/usr/lib/pam/pam_gnome_keyring.la
 }
 
 post-activate    {
