--- a/dports/www/webkit-gtk/Portfile
+++ b/dports/www/webkit-gtk/Portfile
@@ -5,7 +5,7 @@ PortSystem	1.0
 
 name		webkit-gtk
 epoch           1
-version		1.2.4
+version		1.2.5
 description	Apple's WebKit HTML rendering library for GTK+
 long_description ${description}
 maintainers	gmail.com:myschizobuddy devans
@@ -16,12 +16,12 @@ master_sites    ${homepage}
 
 distname        webkit-${version}
 
-checksums       md5     dc3a92dd0e8c2e70263fbfdf809b51a5 \
-                sha1    e4e31e6d5025d8c8d7ac81fe6d7c947918ce4790 \
-                rmd160  787997f6235911675726d903ff3b9549fb615fe5
+checksums       md5     09f04985665b9abf6f0d9956f86a6a31 \
+                sha1    2cd50e62a0c94bba8cc8a8466ea16fac1f9fc1ce \
+                rmd160  7510af4c5d15c06adf984a090a9e9550f5ea7147
 
 patchfiles      patch-WebKitTools-DumpRenderTree-gtk-TestNetscapePlugin-TestNetscapePlugin.cpp.diff \
-                TextBreakIterator.diff\
+                patch-TextBreakIterator.diff\
                 patch-WebCore-config-h.diff
 
 depends_lib	\
@@ -43,7 +43,7 @@ universal_variant   no
 # TODO: Use muniversal, so this is detected per arch
 configure.args	\
         --enable-jit=no \
-        --disable-introspection
+        --enable-introspection=no
 
 post-patch {
     reinplace "s|-licucore|-licui18n -licuuc|" ${worksrcpath}/configure
