scala27: Set supported_archs to noarch.
Suggested by: ryandesign


git-svn-id: https://svn.macports.org/repository/macports/trunk@72216 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/scala27/Portfile
+++ b/dports/lang/scala27/Portfile
@@ -5,7 +5,7 @@ PortGroup select 1.0
 
 name            scala27
 version         2.7.7
-revision        2
+revision        3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      lang java
 maintainers     blair
@@ -19,6 +19,7 @@ long_description \
                 is fully interoperable with Java.
 homepage        http://www.scala-lang.org/
 platforms       darwin
+supported_archs noarch
 
 master_sites    ${homepage}downloads/distrib/files/
 distname        scala-${version}.final
