--- a/dports/lang/scala28/Portfile
+++ b/dports/lang/scala28/Portfile
@@ -5,7 +5,7 @@ PortGroup select 1.0
 
 name            scala28
 version         2.8.0
-revision        2
+revision        3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      lang java
 maintainers     openmaintainer brett blair
@@ -19,6 +19,7 @@ long_description \
                 is fully interoperable with Java.
 homepage        http://www.scala-lang.org/
 platforms       darwin
+supported_archs noarch
 
 master_sites    ${homepage}downloads/distrib/files/
 distname        scala-2.8.0.final
