Partially or fully addresses tickets #19397, #22165, #22360, #22731, #23244, #24942, #25395, #25409, #26117, and #26419.
* Fix universal install.

* Add variant for gcc45; default is still gcc44 but is used only in
  conjunction with +atlas.  If -atlas is specified then no gcc4X
  variant is provided.

* When building with +atlas, require a +gcc4X variant and patch the
  linalg module to link correctly.  In f2py (and numpy's fortran
  discovery scripts), use the gcc4X's gfortran and no other.

* Make atlas optional; NOTE: when building as -atlas, numpy will link
  with OSX-provided Accelerate framework, which does not require a
  fortran compiler for correct linking.  In this case, the
  functionality of f2py is the default, and thus not guaranteed
  because this port no longer depends on fortran via gcc4X.


git-svn-id: https://svn.macports.org/repository/macports/trunk@72220 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-numpy/Portfile
+++ b/dports/python/py25-numpy/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
@@ -5,6 +6,7 @@ PortGroup           python25 1.0
 
 name                py25-numpy
 version             1.5.0
+revision            1
 categories          python
 platforms           darwin
 maintainers         ram openmaintainer
@@ -24,60 +26,110 @@ patchfiles          patch-f2py_setup.py.diff \
                     patch-fcompiler_g95.diff
 
 depends_lib-append  port:fftw-3 \
-                    port:py25-nose \
-                    port:atlas
+                    port:py25-nose
 
-build.env-append      ATLAS=${prefix}/lib \
-                      LAPACK=${prefix}/lib \
-                      BLAS=${prefix}/lib
+variant atlas \
+description {Use the MacPorts' ATLAS libraries \
+             instead of Apple's Accelerate framework} {
+    build.env-append    ATLAS=${prefix}/lib \
+                        LAPACK=${prefix}/lib \
+                        BLAS=${prefix}/lib
+    destroot.env-append ATLAS=${prefix}/lib \
+                        LAPACK=${prefix}/lib \
+                        BLAS=${prefix}/lib
+    depends_lib-append  port:atlas
+}
 
-destroot.env-append   ATLAS=${prefix}/lib \
-                      LAPACK=${prefix}/lib \
-                      BLAS=${prefix}/lib
+# use ALTAS by default; if MacPorts' ATLAS is not used, numpy will
+# link with that supplied by Apple's Accelerate framework.
+if {![variant_isset atlas]} {
+    default_variants +atlas
+}
+
+# when using ATLAS (whether by default or specified by the user via
+# the +atlas variant) ...
+set gcc_version ""
+if {[variant_isset atlas]} {
+    # see if the user has set -gcc4X to disable using MacPorts'
+    # compiler; if not, either use what the user set (as +gcc4X) or
+    # default to gcc44.
+
+    variant gcc43 conflicts gcc44 gcc45 \
+    description {Use the gcc43 compiler (enables fortran linking)} {}
+
+    variant gcc44 conflicts gcc43 gcc45 \
+    description {Use the gcc44 compiler (enables fortran linking)} {}
+
+    variant gcc45 conflicts gcc43 gcc44 \
+    description {Use the gcc45 compiler (enables fortran linking)} {}
+
+    if {![variant_isset gcc43] &&
+        ![variant_isset gcc44] &&
+        ![variant_isset gcc45]} {
+        default_variants +gcc44
+    }
+    if {[variant_isset gcc43]} {
+        set gcc_version "4.3"
+    }
+    if {[variant_isset gcc44]} {
+        set gcc_version "4.4"
+    }
+    if {[variant_isset gcc45]} {
+        set gcc_version "4.5"
+    }
+
+    if {${gcc_version} != ""} {
+        # when using non-Apple GCC for universal install, it can
+        # create binaries only for the native OS architecture, at
+        # either 32 or 64 bits.  Restrict the supported archs
+        # accordingly.
+        if {[variant_exists universal] && [variant_isset universal]} {
+            if { ${os.arch}=="i386" } {
+                set universal_archs_supported { i386 x86_64 }
+            } else {
+                set universal_archs_supported { ppc  ppc64 }
+            }
+        }
+
+        # include all the correct GCC4X port
+        depends_lib-append port:gcc[join [split ${gcc_version} "."] ""]
+
+        # force LDFLAGS for correct linking of the linalg module
+        # for non-Apple GCC compilers
+        patchfiles-append  patch-numpy_linalg_setup.py.diff
+
+    } else {
+        # user specified -gcc4X but +atlas (either as default or
+        # explicitly); do not allow since it might lead to
+        # undetermined runtime execution.
+        return -code error \
+"\n\nWhen using the +atlas variant (either as the default or setting
+explicitly), one of the +gcc4X variants must be selected.\n"
+    }
+}
+
+variant universal {
+    patchfiles-append   patch-setup.py.diff
+}
 
 post-patch {
-  reinplace "s|@@MPORTS_PYTHON@@|${python.bin}|" ${worksrcpath}/numpy/f2py/setup.py
+    reinplace "s|@@MPORTS_PYTHON@@|${python.bin}|" \
+        ${worksrcpath}/numpy/f2py/setup.py
+
+    # disallow searching for any fortran executable except what is
+    # specified in this Portfile; NOTE: this change only works when
+    # setting the GCC version; if this flag is not set (meaning no
+    # +gcc4X variant is set), then F2PY may or not work.
+    if {${gcc_version} != ""} {
+        # set which fortran to use in the f2py Python scripts
+        reinplace "/possible_executables/s|\\\[.*\\\]|\['gfortran-mp-${gcc_version}'\]|g" ${worksrcpath}/numpy/distutils/fcompiler/gnu.py
+    }
 }
 
 post-destroot {
   if {${os.platform} == "darwin" && ${os.major} < 10} {
     move ${destroot}${prefix}/bin/f2py ${destroot}${prefix}/bin/f2py${python.branch}
   }
-}
-
-variant gcc43 conflicts gcc44 description {Use the gcc43 compiler (enables fortran code)} {
-  depends_lib-append  port:gcc43
-  configure.compiler  macports-gcc-4.3
-  build.env-append    CC="${prefix}/bin/gcc-mp-4.3" \
-                      CXX="${prefix}/bin/g++-mp-4.3"
-
-  destroot.env-append CC="${prefix}/bin/gcc-mp-4.3" \
-                      CXX="${prefix}/bin/g++-mp-4.3"
-}
-
-variant gcc44 conflicts gcc43 description {Use the gcc44 compiler (enables fortran code)} {
-  depends_lib-append  port:gcc44
-  configure.compiler  macports-gcc-4.4
-  build.env-append    CC="${prefix}/bin/gcc-mp-4.4" \
-                      CXX="${prefix}/bin/g++-mp-4.4"
-
-  destroot.env-append CC="${prefix}/bin/gcc-mp-4.4" \
-                      CXX="${prefix}/bin/g++-mp-4.4"
-}
-
-if {![variant_isset gcc43]} {
-    default_variants +gcc44
-}
-
-variant no_atlas description {Do not use the macports atlas libs} {
-  depends_lib-delete  port:atlas
-  build.env-delete    ATLAS=${prefix}/lib \
-                      LAPACK=${prefix}/lib \
-                      BLAS=${prefix}/lib
-
-  destroot.env-delete ATLAS=${prefix}/lib \
-                      LAPACK=${prefix}/lib \
-                      BLAS=${prefix}/lib
 }
 
 livecheck.type        regex
