Addresses ticket #21590: corrects +universal variant.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72221 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-sip/Portfile
+++ b/dports/python/py25-sip/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            py25-sip
 version         4.11.1
+revision        1
 categories      python devel
 maintainers     saispo openmaintainer
 platforms       macosx
@@ -44,6 +45,14 @@ pre-configure {
         ${worksrcpath}/specs/macx-g++
     reinplace "s| c++\$| ${configure.cxx}|" \
         ${worksrcpath}/specs/macx-g++
+}
+
+variant universal {
+	configure.universal_args
+	configure.post_args	LFLAGS="-F${frameworks_dir} -L${prefix}/lib \
+								${configure.universal_ldflags}"
+	configure.post_args-append	CFLAGS="${configure.universal_cflags}"
+	configure.post_args-append	CXXFLAGS="${configure.universal_cxxflags}"
 }
 
 configure.pre_args  -d ${prefix}/lib/python2.5/site-packages \
