editors/vim, editors/vim-app: Fix build failure with +x11 variant, #26744
git-svn-id: https://svn.macports.org/repository/macports/trunk@72227 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/vim-app/Portfile
+++ b/dports/editors/vim-app/Portfile
@@ -7,7 +7,7 @@ set realname        vim
 set vim_version     7.3
 set vim_patchlevel  11
 version             ${vim_version}.${vim_patchlevel}
-revision            1
+revision            2
 categories          editors
 maintainers         raimue
 description         Vim.app is a GUI version of the famous editor vim.
@@ -27,6 +27,8 @@ distfiles           vim-${vim_version}${extract.suffix}:vim \
                     doc.tar.gz:doc_aqua
 dist_subdir         vim[strsed ${vim_version} {g/\.//}]
 worksrcdir          vim[strsed ${vim_version} {g/\.//}]
+
+patchfiles-append   patch-x11.diff
 
 # Generate patchfiles
 set low 1
