--- a/dports/editors/vim/Portfile
+++ b/dports/editors/vim/Portfile
@@ -6,7 +6,7 @@ name                vim
 set vim_version     7.3
 set vim_patchlevel  11
 version             ${vim_version}.${vim_patchlevel}
-revision            1
+revision            2
 categories          editors
 maintainers         raimue
 description         Vi \"workalike\" with many additional features
@@ -23,6 +23,8 @@ distname            vim-${vim_version}
 use_bzip2           yes
 dist_subdir         vim[strsed ${vim_version} {g/\.//}]
 worksrcdir          vim[strsed ${vim_version} {g/\.//}]
+
+# patchfiles-append   patch-x11.diff
 
 # Generate patchfiles
 set low 1
