editors/vim: Accidentally left patchfiles line commented, addition to r72227.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72228 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/vim/Portfile
+++ b/dports/editors/vim/Portfile
@@ -6,7 +6,7 @@ name                vim
 set vim_version     7.3
 set vim_patchlevel  11
 version             ${vim_version}.${vim_patchlevel}
-revision            2
+revision            3
 categories          editors
 maintainers         raimue
 description         Vi \"workalike\" with many additional features
@@ -24,7 +24,7 @@ use_bzip2           yes
 dist_subdir         vim[strsed ${vim_version} {g/\.//}]
 worksrcdir          vim[strsed ${vim_version} {g/\.//}]
 
-# patchfiles-append   patch-x11.diff
+patchfiles-append   patch-x11.diff
 
 # Generate patchfiles
 set low 1
