py26-scipy: remove extra quoting from variant description
git-svn-id: https://svn.macports.org/repository/macports/trunk@72229 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-scipy/Portfile
+++ b/dports/python/py26-scipy/Portfile
@@ -43,7 +43,7 @@ post-patch {
   reinplace "s|include <\\(umfpack\.*.h\\)>|include <${prefix}/include/ufsparse/\\1>|g" ${worksrcpath}/scipy/sparse/linalg/dsolve/umfpack/umfpack.i
 }
 
-variant no_atlas description {"Do not use macports atlas libraries"} {
+variant no_atlas description "Do not use macports atlas libraries" {
     depends_lib-delete      port:atlas
 
     build.env-delete        ATLAS=${prefix}/lib \
