--- a/dports/audio/pianobar/Portfile
+++ b/dports/audio/pianobar/Portfile
@@ -46,3 +46,6 @@ build.args                  CC="${configure.cc} ${archflags}" \
                             LIBMAD_INCLUDE=${prefix}/include
 
 destroot.args               PREFIX=${prefix}
+
+livecheck.type              regex
+livecheck.regex             ${name}-(\[0-9.\]+)${extract.suffix}
