pianobar: update to 2010.10.07; now works again with latest Pandora API changes; see #26754
git-svn-id: https://svn.macports.org/repository/macports/trunk@72232 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/pianobar/Portfile
+++ b/dports/audio/pianobar/Portfile
@@ -4,7 +4,7 @@
 PortSystem                  1.0
 
 name                        pianobar
-version                     2010.08.21
+version                     2010.10.07
 categories                  audio
 platforms                   darwin
 maintainers                 gmail.com:aguynamedryan+pianobar
@@ -26,9 +26,8 @@ depends_lib                 port:libao \
                             port:faad2 \
                             port:libmad
 
-checksums                   md5     980012b848ff24c0398a4a5641e2b76b \
-                            sha1    9ee97c47623fbccdbb91c4a713524aebafd78b68 \
-                            rmd160  4a5bc1278264151e317b78e44c0b84ef509e4463
+checksums                   sha1    d59dfea599c8719f12731e12899a608c90bc0897 \
+                            rmd160  00f9d3abfd03255d839fe84d3024c9455e4ff4e4
 
 use_configure               no
 
