--- a/dports/net/csshX/Portfile
+++ b/dports/net/csshX/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                csshX
-version             0.72
+version             0.73
 categories          net sysutils security
 maintainers         nomaintainer
 supported_archs     noarch
@@ -20,9 +20,8 @@ homepage            http://code.google.com/p/csshx/
 master_sites        googlecode
 extract.suffix      .tgz
 
-checksums           md5     15178bbdaaa8f949bd583bd639577232 \
-                    sha1    a77f3047ebba8e77eced296db49dd359d5e19742 \
-                    rmd160  ba9d1dc7addd51713a9225ed77a985e4b5eaca61
+checksums           sha1    6a97a7d88986b1ef6cbd451e1d473db4c9fecda3 \
+                    rmd160  4a4d14520c5ed9076568aebea3a4103278dc9800
 
 # Note this does not depend on MacPorts' perl but the system one for
 # things like Foundation.pm...
