--- a/dports/graphics/graphviz-devel/Portfile
+++ b/dports/graphics/graphviz-devel/Portfile
@@ -9,7 +9,7 @@ name                            graphviz-devel
 conflicts                       graphviz
 set my_name                     graphviz
 # keep version in sync between graphviz-devel and graphviz-gui-devel
-version                         2.27.20101001.0445
+version                         2.27.20101008.0251
 categories                      graphics
 maintainers                     ryandesign
 license                         CPLv1.0
@@ -33,9 +33,8 @@ long_description                Graph Visualization Software from AT&T Laborator
                                 programs (for non-interactive use) can use the +no_x11 \
                                 variant to build graphviz without its display routines.
 
-checksums                       md5     9f1aed5682305841985a4aa935cf3fa5 \
-                                sha1    1cc7a69ea63804e50eb2e7520e20fe7561b962c2 \
-                                rmd160  2d8335e22cdb9a41322ae9e0737c5ddf38a29a8c
+checksums                       sha1    054be8605ffe8ddca9c1a8cb5d0fae83c16e6378 \
+                                rmd160  4dd29ad5b97d033514bf2b78d9d5411365721d6a
 
 # graphviz needs Xcode 3.1+ to avoid the libGL error when building the smyrna variant
 # graphviz-gui needs Xcode 3.1.2+; see #18811
@@ -65,9 +64,13 @@ archcheck.files                 lib/libXaw.dylib \
                                 lib/libz.dylib \
                                 lib/libintl.dylib
 
-depends_build                   port:pkgconfig
+use_autoreconf                  yes
+
+depends_build-append            port:pkgconfig
 
 depends_run                     port:urw-fonts
+
+patchfiles                      patch-lib-gvc-Makefile.am.diff
 
 configure.args                  --with-codegens \
                                 --with-x \
