macfuse: build SDK with correct architectures on 10.5/PPC (#26721)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72241 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/macfuse/Portfile
+++ b/dports/fuse/macfuse/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name                macfuse
 version             2.0.3
-revision            2
+revision            3
 categories          fuse devel
 platforms           macosx
 maintainers         dports
@@ -36,6 +36,7 @@ patchfiles          patch-10.5-to-10.6.diff \
                     patch-sdk-objc_GMUserFileSystem.m.diff \
                     patch-sdk-objc_MacFuse.xcodeproj.diff \
                     patch-10.5_fusefs_fusefs.xcodeproj_project.pbxproj.diff \
+                    patch-10.5_universal_build.diff \
                     patch-10.5_libfuse_fuse-2.7.3-macosx.patch.diff \
                     patch-10.6_libfuse_fuse-2.7.3-macosx.patch.diff
 
