--- a/dports/mail/gnupg/Portfile
+++ b/dports/mail/gnupg/Portfile
@@ -5,6 +5,7 @@ PortSystem  1.0
 
 name            gnupg
 version         1.4.10
+revision        1
 categories      mail security
 maintainers     waqar
 description     GNU pretty-good-privacy package
@@ -40,7 +41,7 @@ depends_lib     port:libiconv \
                 port:readline \
                 port:zlib \
                 port:bzip2 \
-                port:libusb
+                port:libusb-compat
 
 test.run        yes
 test.dir        ${worksrcpath}/checks
