AtomicParsley[-devel]: declare conflicts
git-svn-id: https://svn.macports.org/repository/macports/trunk@72245 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/AtomicParsley-devel/Portfile
+++ b/dports/multimedia/AtomicParsley-devel/Portfile
@@ -18,6 +18,8 @@ distfiles
 
 depends_lib     port:zlib
 
+conflicts       AtomicParsley
+
 fetch.type      svn
 svn.url         http://atomicparsley.svn.sourceforge.net/svnroot/atomicparsley/trunk/atomicparsley
 svn.revision    ${svn_rev}
