--- a/dports/multimedia/AtomicParsley/Portfile
+++ b/dports/multimedia/AtomicParsley/Portfile
@@ -18,6 +18,8 @@ checksums          md5 681e6ecec2921c98e07a9262bdcd6cf2 \
                    sha1 6a73aed6ba569e693fe94a313e7e9e9ce204d038 \
                    rmd160 53026ab6b251614eb3a649fe611f86d68e06dc8e
 
+conflicts          AtomicParsley-devel
+
 use_configure      no
 build.cmd          ./build
 
