--- a/dports/devel/apache-ant/Portfile
+++ b/dports/devel/apache-ant/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 name			apache-ant
 version			1.8.1
 categories		devel java
-maintainers		openmaintainer jberry
+maintainers		openmaintainer blair
 description		Java opensource build system
 long_description	Ant is a Java based build tool. In theory it is kind of \
 				like make without make's wrinkles. Ant uses XML build files \
