--- a/dports/java/commons-collections/Portfile
+++ b/dports/java/commons-collections/Portfile
@@ -6,7 +6,7 @@ name			commons-collections
 version			3.2.1
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		blair openmaintainer
 platforms		darwin
 
 description		Jakarta Commons-Collections
